--- a/play.ipynb
+++ b/play.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compiled = torch.compile(model, mode='max-autotune', fullgraph=True)\n",
+    "compiled = torch.compile(model, mode=\"max-autotune\", fullgraph=True)\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
     "criterion = nn.CrossEntropyLoss()"
    ]
@@ -296,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary(model,tuple(images.shape[1:]))"
+    "summary(model, tuple(images.shape[1:]))"
    ]
   },
   {
@@ -366,7 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "runner = bentoml.pytorch.get('resnet-pneumonia').to_runner()\n",
+    "runner = bentoml.pytorch.get(\"resnet-pneumonia\").to_runner()\n",
     "runner.init_local()"
    ]
   },
